Fix for getting Object Frame (and plugins) getting focus on Mac. Fixes Shockwave typing input bug 68756 a=av sr=sfraser